// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Person renders correctly with full props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Person
    onClick={[Function]}
    person={
      Object {
        "id": 1,
        "name": "Ivan",
        "popularity": 8,
        "profile_path": "/img1234_0987",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          replace={false}
          to="/person/1"
        >
          <Poster
            path="/img1234_0987"
          />
        </Link>,
        <div
          className="top-info"
        >
          <Link
            className="title"
            replace={false}
            to="/person/1"
          >
            Ivan
          </Link>
          <span
            className="popularity"
          >
            8
          </span>
        </div>,
      ],
      "className": "person",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": <Poster
            path="/img1234_0987"
          />,
          "replace": false,
          "to": "/person/1",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "path": "/img1234_0987",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Link
              className="title"
              replace={false}
              to="/person/1"
            >
              Ivan
            </Link>,
            <span
              className="popularity"
            >
              8
            </span>,
          ],
          "className": "top-info",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": "Ivan",
              "className": "title",
              "replace": false,
              "to": "/person/1",
            },
            "ref": null,
            "rendered": "Ivan",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "8",
              "className": "popularity",
            },
            "ref": null,
            "rendered": "8",
            "type": "span",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            replace={false}
            to="/person/1"
          >
            <Poster
              path="/img1234_0987"
            />
          </Link>,
          <div
            className="top-info"
          >
            <Link
              className="title"
              replace={false}
              to="/person/1"
            >
              Ivan
            </Link>
            <span
              className="popularity"
            >
              8
            </span>
          </div>,
        ],
        "className": "person",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": <Poster
              path="/img1234_0987"
            />,
            "replace": false,
            "to": "/person/1",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "path": "/img1234_0987",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Link
                className="title"
                replace={false}
                to="/person/1"
              >
                Ivan
              </Link>,
              <span
                className="popularity"
              >
                8
              </span>,
            ],
            "className": "top-info",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": "Ivan",
                "className": "title",
                "replace": false,
                "to": "/person/1",
              },
              "ref": null,
              "rendered": "Ivan",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "8",
                "className": "popularity",
              },
              "ref": null,
              "rendered": "8",
              "type": "span",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Person renders correctly with partial props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Person
    onClick={[Function]}
    person={
      Object {
        "id": 2,
        "name": "Vasiliy",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          replace={false}
          to="/person/2"
        >
          <Poster
            path=""
          />
        </Link>,
        <div
          className="top-info"
        >
          <Link
            className="title"
            replace={false}
            to="/person/2"
          >
            Vasiliy
          </Link>
        </div>,
      ],
      "className": "person",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": <Poster
            path=""
          />,
          "replace": false,
          "to": "/person/2",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "path": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Link
              className="title"
              replace={false}
              to="/person/2"
            >
              Vasiliy
            </Link>,
            null,
          ],
          "className": "top-info",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": "Vasiliy",
              "className": "title",
              "replace": false,
              "to": "/person/2",
            },
            "ref": null,
            "rendered": "Vasiliy",
            "type": [Function],
          },
          null,
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            replace={false}
            to="/person/2"
          >
            <Poster
              path=""
            />
          </Link>,
          <div
            className="top-info"
          >
            <Link
              className="title"
              replace={false}
              to="/person/2"
            >
              Vasiliy
            </Link>
          </div>,
        ],
        "className": "person",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": <Poster
              path=""
            />,
            "replace": false,
            "to": "/person/2",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "path": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Link
                className="title"
                replace={false}
                to="/person/2"
              >
                Vasiliy
              </Link>,
              null,
            ],
            "className": "top-info",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": "Vasiliy",
                "className": "title",
                "replace": false,
                "to": "/person/2",
              },
              "ref": null,
              "rendered": "Vasiliy",
              "type": [Function],
            },
            null,
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
